--- a/package.json
+++ b/package.json
@@ -17,6 +17,9 @@
     "@vitejs/plugin-vue": "^1.1.4",
     "@vue/compiler-sfc": "^3.0.5",
     "babel-plugin-import": "^1.13.3",
+    "eslint-config-prettier": "^7.2.0",
+    "eslint-plugin-prettier": "^3.3.1",
+    "prettier": "^2.2.1",
     "vite": "^2.0.0-beta.69"
   }
 }
